# geany-plugins

./: .travis.yml  MAINTAINERS  Makefile.am  NEWS  README  README.template  configure.ac
devhelp/devhelp/: dh-window.c
geanypg/src/: geanypg.c  geanypg.h  geanypg_keybindings.c  geanypg_keybindings.h  keybindings.c  keybindings.h
geanyvim/src/: main.c
git-changebar/src/: gcb-plugin.c
latex/: ABOUT  INSTALL  TODO
latex/doc/: Makefile.am  latex.tex
latex/src/: Makefile.am  latex.c
po/: POTFILES.in
scope/data/: scope.glade
snippetsmenu/: Makefile.am  README  plugin.c
snippetsmenu/snippets/: Makefile.am
snippetsmenu/snippets/Html/Doctypes/: HTML 4.01 Transitional.xml  HTML_4.01_Strict.xml  XHTML 1.0 Frameset.xml  XHTML 1.0 Strict.xml  XHTML_1.0_Transitional.xml
snippetsmenu/snippets/Html/Foms/: Checkbox.xml  Form Tag.xml
snippetsmenu/snippets/Html/Tags/: Javascript.xml
snippetsmenu/snippets/Html/Tags/Meta/: Meta Http Equiv.xml  Meta_Description.xml  Meta_Keywords.xml
snippetsmenu/snippets/Html/Tags/Stylesheet/: Stylesheet Reset.xml  Stylesheet Tag.xml
snippetsmenu/snippets/PHP+HTML/: Form.xml
snippetsmenu/snippets/PHP+HTML/Select Box/: Form text input.xml
snippetsmenu/snippets/PHP/Convert Date/: 01-13-2011.xml  13 Jan 2011.xml
snippetsmenu/snippets/PHP/Convert_Date/: 13-01-2011.xml  13_January_2011.xml
snippetsmenu/snippets/PHP/Current Date/: 13 January 2011.xml  13-01-2011.xml
snippetsmenu/snippets/PHP/Current_Date/: 13-01-11.xml  13_Jan_2011.xml  Thu,_13_Jan_2011.xml
snippetsmenu/snippets/PHP_HTML/: Checkbox.xml  Form_Action.xml
snippetsmenu/snippets/PHP_HTML/Select_Box/: Form_textarea.xml  From_mysql_resut_set.xml
snippetsmenu/src/: Makefile.am  plugin.c
snipptsxtd/: plugin.c
snipptsxtd/snippets/Html/Doctypes/: HTML 4.01 Frameset.xml  XHTML 1.1 Basic.xml  XHTML 1.1.xml
snipptsxtd/snippets/Html/Foms/: File.xml  Password.xml  Radio.xml  Submit.xml
snipptsxtd/snippets/Html/Hyperlinks/: Google.xml
snipptsxtd/snippets/Html/Misc/: Table.xml  generate_table
snipptsxtd/snippets/Html/Tags/: HTTP Refresh.xml
snipptsxtd/snippets/PHP+HTML/: Calendar Table.xml
snipptsxtd/snippets/PHP+HTML/Select Box/: From array.xml
tableconvert/src/: tableconvert.c
updatechecker/: README
webhelper/: README
(+10 files in other folders)
