include $(top_srcdir)/build/vars.docs.mk

plugin = snippetsmenu

nobase_dist_plugindata_DATA = \
	Html/Foms/Submit.xml\
	Html/Foms/Password.xml\
	Html/Foms/Form_Tag.xml\
	Html/Foms/Checkbox.xml\
	Html/Foms/Radio.xml\
	Html/Foms/File.xml\
	Html/Misc/Table.xml\
	Html/Misc/generate_table\
	Html/Doctypes/XHTML_1.1_Basic.xml\
	Html/Doctypes/XHTML_1.0_Strict.xml\
	Html/Doctypes/XHTML_1.0_Transitional.xml\
	Html/Doctypes/HTML_4.01_Transitional.xml\
	Html/Doctypes/XHTML_1.0_Frameset.xml\
	Html/Doctypes/XHTML_1.1.xml\
	Html/Doctypes/HTML_4.01_Frameset.xml\
	Html/Doctypes/HTML_4.01_Strict.xml\
	Html/Hyperlinks/Google.xml\
	Html/Tags/Meta/Meta_Tag.xml\
	Html/Tags/Meta/Meta_Keywords.xml\
	Html/Tags/Meta/Meta_Description.xml\
	Html/Tags/Meta/Meta_Http_Equiv.xml\
	Html/Tags/Meta/Meta_Robots.xml\
	Html/Tags/Javascript.xml\
	Html/Tags/HTTP_Refresh.xml\
	Html/Tags/Stylesheet/Stylesheet_Tag.xml\
	Html/Tags/Stylesheet/Stylesheet_File.xml\
	Html/Tags/Stylesheet/Stylesheet_Reset.xml\
	PHP/Convert_Date/13_January_2011.xml\
	PHP/Convert_Date/Thursday,_13_January_2011.xml\
	PHP/Convert_Date/13_Jan_2011.xml\
	PHP/Convert_Date/13-01-2011.xml\
	PHP/Convert_Date/13-01-11.xml\
	PHP/Convert_Date/01-13-2011.xml\
	PHP/Convert_Date/Thu,_13_Jan_2011.xml\
	PHP/Convert_Date/01-13-11.xml\
	PHP/Current_Date/13_January_2011.xml\
	PHP/Current_Date/Thursday,_13_January_2011.xml\
	PHP/Current_Date/13_Jan_2011.xml\
	PHP/Current_Date/13-01-2011.xml\
	PHP/Current_Date/13-01-11.xml\
	PHP/Current_Date/01-13-2011.xml\
	PHP/Current_Date/Thu,_13_Jan_2011.xml\
	PHP/Current_Date/01-13-11.xml\
	PHP_HTML/Calendar_Table.xml\
	PHP_HTML/Checkbox.xml\
	PHP_HTML/Select_Box/Form_textarea.xml\
	PHP_HTML/Select_Box/From_mysql_resut_set.xml\
	PHP_HTML/Select_Box/Form_text_input.xml\
	PHP_HTML/Select_Box/From_array.xml\
	PHP_HTML/Form_Action.xml
